overflow fixed

--- a/src/main/webapp/css/administrator.css
+++ b/src/main/webapp/css/administrator.css
@@ -120,8 +120,9 @@ textarea{
    float: left;
    padding: 8px;
    padding-top: 20px;
+   overflow-y: scroll;
+	overflow-x: hidden;
 
-   /* direction: rtl; */
 }
 
 
